Each item-photo now appears in a fullscreen modal. ISSUE: Modal css clashes with the item transformation css resulting in the modal flickering

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,7 @@
   padding-top: 2.5em;
   padding-bottom: 2.5em;
 }
+
+body {
+  color: $gray;
+}
